--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -9,14 +9,17 @@ jobs:
   test:
     runs-on: ubuntu-latest
     steps:
-      - name: clone repository
+      - name: Clone repository
         uses: actions/checkout@v3
 
-      - name: setup java and gradle
+      - name: Setup java
         uses: actions/setup-java@v3
         with:
           java-version: 17
           distribution: "temurin"
+
+      - name: Setup Gradle
+        uses: gradle/actions/setup-gradle@v4
 
       - name: run tests
         run: ./gradlew test
