--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -7,19 +7,16 @@ on:
 
 jobs:
   test:
-    runs-on: ubuntu-latest
+    runs-on: self-hosted
     steps:
-      - name: Clone repository
-        uses: actions/checkout@v3
-
-      - name: Setup java
-        uses: actions/setup-java@v3
-        with:
-          java-version: 17
-          distribution: "temurin"
-
-      - name: Setup Gradle
-        uses: gradle/actions/setup-gradle@v4
+#      - name: Clone repository
+#        uses: actions/checkout@v3
+#
+#      - name: Setup java
+#        uses: actions/setup-java@v3
+#        with:
+#          java-version: 17
+#          distribution: "temurin"
 
       - name: run tests
         run: ./gradlew test
