--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -9,21 +9,15 @@ jobs:
   test:
     runs-on: self-hosted
     steps:
-#      - name: Clone repository
-#        uses: actions/checkout@v3
-#
-#      - name: Setup java
-#        uses: actions/setup-java@v3
-#        with:
-#          java-version: 17
-#          distribution: "temurin"
+      - name: Clone repository
+        uses: actions/checkout@v3
 
       - name: run tests
         run: ./gradlew test
 
   print:
-    runs-on: ubuntu-latest
+    runs-on: self-hosted
     needs: test
     steps:
       - name: print message
-        run: echo 'Finish!'
+        run: echo 'Finish!132323'
