--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -9,8 +9,8 @@ jobs:
   test:
     runs-on: self-hosted
     steps:
-      #- name: Clone repository
-      #  uses: actions/checkout@v3
+      - name: Clone repository
+        uses: actions/checkout@v3
 
       - name: run tests
         run: ./gradlew test
