--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -28,6 +28,7 @@ jobs:
       - name: Build a project image and send it to docker storage.
         run: |
           docker login -u ${{ secrets.DOCKER_HUB_LOGIN }} -p ${{ secrets.DOCKER_HUB_PASSWORD }}
+          echo ${{ env.ACCOUNT_NAME }} 
           docker build -t ${{ env.ACCOUNT_NAME }}/${{ env.REPOSITORY_NAME }}:${{ env.TAG }} .
           docker push ${{ env.ACCOUNT_NAME }}/${{ env.REPOSITORY_NAME }}:${{ env.TAG }}
 
